--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3067,12 +3067,12 @@
    "id": "466aa7a4",
    "metadata": {},
    "source": [
-    "To prepare raw fraud transaction data into a clean, balanced, and numerically represented format, ready for machine learning model training"
+    "To prepare raw fraud transaction data into a clean, class balanced, and numerically represented format, ready for machine learning model training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "b8700edc",
    "metadata": {},
    "outputs": [
@@ -3314,6 +3314,7 @@
    ],
    "source": [
     "from feature_pipeline import process_frude\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "numerical_cols = []\n",
     "category_cols = []\n",
     "\n",
