--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "49a9980d",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4ff5a0e0",
    "metadata": {},
    "outputs": [
@@ -100,10 +100,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing columns: ['purchase_value']\n",
-      "Found 202 outliers in column 'purchase_value'.\n",
-      "Median value for 'purchase_value' (used for replacement): 35.0\n",
-      "Outliers in column 'purchase_value' replaced with median.\n",
+      "Processing columns: ['age']\n",
+      "No outliers found in column 'age' using z-score threshold 3.\n",
       "No outliers found in column 'user_id' using z-score threshold 3.\n",
       "Warning: Standard deviation is zero for column 'signup_time'. Skipping outlier detection/replacement.\n",
       "Warning: Standard deviation is zero for column 'purchase_time'. Skipping outlier detection/replacement.\n",
@@ -123,13 +121,13 @@
        "['class']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fraud_data = find_and_replace_outliers_with_median(fraud_data, ['purchase_value'])\n",
+    "fraud_data = find_and_replace_outliers_with_median(fraud_data, ['age'])\n",
     "find_outliers(fraud_data)"
    ]
   },
@@ -921,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6f696dff",
    "metadata": {},
    "outputs": [],
@@ -931,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "855a77da",
    "metadata": {},
    "outputs": [],
@@ -954,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a48d1dad",
    "metadata": {},
    "outputs": [],
@@ -981,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "cabaebec",
    "metadata": {},
    "outputs": [],
@@ -1042,6 +1040,36 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "a51973a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from feature_pipeline import process_frude, fraud_pipeline, credit_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5163e0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_columns(df:pd.DataFrame, exclude:list[str]):\n",
+    "    numerical_cols = []\n",
+    "    category_cols = []\n",
+    "    for col in df.columns:\n",
+    "        if col in exclude:\n",
+    "            continue\n",
+    "        if pd.api.types.is_numeric_dtype(df[col]):\n",
+    "            numerical_cols.append(col)\n",
+    "        else:\n",
+    "            category_cols.append(col)\n",
+    "    return (numerical_cols, category_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b8700edc",
    "metadata": {},
    "outputs": [
@@ -1240,18 +1268,8 @@
     }
    ],
    "source": [
-    "from feature_pipeline import process_frude, fraud_pipeline, credit_pipeline\n",
-    "def split_columns(df:pd.DataFrame, exclude:list[str]):\n",
-    "    numerical_cols = []\n",
-    "    category_cols = []\n",
-    "    for col in df.columns:\n",
-    "        if col in exclude:\n",
-    "            continue\n",
-    "        if pd.api.types.is_numeric_dtype(df[col]):\n",
-    "            numerical_cols.append(col)\n",
-    "        else:\n",
-    "            category_cols.append(col)\n",
-    "    return (numerical_cols, category_cols)\n",
+    "\n",
+    "\n",
     "numerical_cols, category_cols = split_columns(fraud_data, ['class'])\n",
     "\n",
     "train_setup = process_frude(fraud_data, numerical_cols, category_cols, fraud_pipeline,'class')"
@@ -1259,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "09f8aa53",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1400,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
+   "id": "c13d881e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model_train import TrainModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a42855e",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1487,7 @@
     }
    ],
    "source": [
-    "from model_train import TrainModel\n",
+    "\n",
     "train = TrainModel(train_setup)\n",
     "train.run(\"eccommerce\")"
    ]
@@ -1488,16 +1516,16 @@
       "  warnings.warn(\n",
       "/home/mikiask/anotherproject/Improved-detection-of-fraud-cases-for-e-commerce-and-bank-transactions-week-8-9/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
       "  warnings.warn(\n",
-      "Registered model 'tracking-linear_credit' already exists. Creating a new version of this model...\n",
-      "2025/07/23 13:18:19 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-linear_credit, version 2\n",
-      "Created version '2' of model 'tracking-linear_credit'.\n"
+      "Successfully registered model 'tracking-bank_transaction'.\n",
+      "2025/07/27 11:59:10 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking-bank_transaction, version 1\n",
+      "Created version '1' of model 'tracking-bank_transaction'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run thoughtful-fox-880 at: http://127.0.0.1:8080/#/experiments/781422193514839311/runs/8677f9473437492cadf83e7dccc70b3b\n",
+      "🏃 View run valuable-lark-337 at: http://127.0.0.1:8080/#/experiments/781422193514839311/runs/e97f65719cce4fddab62595e000f5371\n",
       "🧪 View experiment at: http://127.0.0.1:8080/#/experiments/781422193514839311\n"
      ]
     }
