fix: code documenation and readablity

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1049,12 +1049,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5163e0bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_columns(df:pd.DataFrame, exclude:list[str]):\n",
+    "    \"\"\"\n",
+    "    Splits the columns of a DataFrame into numerical and categorical lists based on their data types.\n",
+    "\n",
+    "    Columns specified in the `exclude` list will be ignored and not included in either the\n",
+    "    numerical or categorical lists.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The input DataFrame whose columns are to be split.\n",
+    "        exclude (list[str]): A list of column names to exclude from the splitting process.\n",
+    "                             These columns will not appear in the returned numerical or\n",
+    "                             categorical lists.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple[list[str], list[str]]: A tuple containing two lists:\n",
+    "                                     - The first list contains the names of numerical columns.\n",
+    "                                     - The second list contains the names of categorical columns.\n",
+    "    \"\"\"\n",
     "    numerical_cols = []\n",
     "    category_cols = []\n",
     "    for col in df.columns:\n",
@@ -1065,6 +1082,14 @@
     "        else:\n",
     "            category_cols.append(col)\n",
     "    return (numerical_cols, category_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35c6e141",
+   "metadata": {},
+   "source": [
+    "setup the training and testing data from the eccommerce using the pipeline"
    ]
   },
   {
@@ -1269,10 +1294,16 @@
    ],
    "source": [
     "\n",
-    "\n",
     "numerical_cols, category_cols = split_columns(fraud_data, ['class'])\n",
-    "\n",
     "train_setup = process_frude(fraud_data, numerical_cols, category_cols, fraud_pipeline,'class')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74992146",
+   "metadata": {},
+   "source": [
+    "setup the training and testing data from the bank transaction using the pipeline"
    ]
   },
   {
@@ -1399,6 +1430,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "461bb873",
+   "metadata": {},
+   "source": [
+    "using MLFlow to train and evaluate models like Linear regressions, GBM and decision tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "c13d881e",
@@ -1498,6 +1537,14 @@
    "metadata": {},
    "source": [
     "#### for credit data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2c777e5",
+   "metadata": {},
+   "source": [
+    "traning the bank transaction data"
    ]
   },
   {
