fix:updated doc about model selection

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1581,6 +1581,14 @@
     "credit_train = TrainModel(credit_train_setup)\n",
     "credit_train.run(\"bank_transaction\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4161cf3",
+   "metadata": {},
+   "source": [
+    "i choose the eccomerce GBM model because it has a more higher f-score and a better ROC than the reset of the models "
+   ]
   }
  ],
  "metadata": {
